fix alignment

--- a/src/app/component/hardware-status/hardware-status.component.css
+++ b/src/app/component/hardware-status/hardware-status.component.css
@@ -41,6 +41,11 @@
 .input-group{
   height: 35px;
 }
+.btn-group{
+  margin-top: 45px;
+  height: 57px;
+  padding-top: 16px;
+}
 .ser{
   width: 170px;
   outline: none;
